# LLM4SE_03

./: .dockerignore  .gitignore  DOCKER_COMMANDS.md  DOCKER_ENV_SETUP.md  DOCKER_LOCAL.md  ENV_EXAMPLE  README.md  SUBMISSION_CHECKLIST.md  build-docker.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-daemon.json  docker.env  generate_secret_key.sh  start.sh
backend/: .dockerignore  .gitignore  Dockerfile  ENV_TEMPLATE.txt  NEXT_STEPS.md  README.md  SETUP.md  alembic.ini  install_deps.sh  pyproject.toml  pytest.ini  requirements.txt  test_auth.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  MIGRATION_EXAMPLE.md
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base_agent.py  budget_analyzer_agent.py  chat_assistant_agent.py  simple_trip_agent.py  trip_planner_agent.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  base.py  budget.py  expense.py  trip.py  user.py
backend/app/schemas/: __init__.py  auth.py  expense.py  trip.py
backend/app/services/: __init__.py  agent_service.py  auth_service.py  expense_ai_service.py  expense_service.py  llm_service.py  trip_ai_service.py  trip_planning_ai_service.py
backend/app/utils/: __init__.py  agui_encoder.py  agui_types.py  agui_utils.py  (+5 more)
backend/tests/: conftest.py  test_auth.py  test_auth_comprehensive.py  test_budget_comprehensive.py  test_data_validation.py  test_expense_comprehensive.py  test_full_workflow.py  test_integration_comprehensive.py  test_itinerary_comprehensive.py  test_map_comprehensive.py  test_trip_comprehensive.py
(+95 files in other folders)
